# programmers_and_cats

./: CMakeLists.txt  README.md
assets/: program_2d_simple.frag  program_2d_simple.vert  program_2d_simple_color.frag  program_2d_simple_color.vert  shader_text_simple.frag  shader_text_simple.vert  texture_board.tex  texture_fired.tex  texture_floor.tex  texture_man1.tex  texture_wall.tex
src/: CMakeLists.txt  main.c
src/common/: bites.c  coord.c  file.c
src/core/: animation.c  cmath.c  downloader.c  game.c  rect.c  shaders.c  sprite.c  text.c  timer.c
src/game/: a_star.c  board.c  fired.c  floor.c  game_over.c  human.c  path.c  productivity.c  wall.c
src/include/common/: bites.h  coord.h  file.h
src/include/core/: animation.h  cmath.h  downloader.h  game.h  rect.h  shaders.h  sprite.h  text.h  timer.h
src/include/game/: a_star.h  board.h  fired.h  floor.h  game_over.h  human.h  path.h  productivity.h  wall.h
src/include/levels/: levels.h
src/include/shaders/: 2d_simple.h  2d_simple_color.h  list.h
src/include/textures/: list.h
src/levels/: logo.c  office_0x0.c
src/shaders/: 2d_simple.c  2d_simple_color.c
web_version/: index.html  office.data  office.js  office.wasm
